--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha4'
     // TODO (01) Add Timber gradle dependency from https://github.com/JakeWharton/timber#download
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
